[gd_scene load_steps=3 format=2]

[ext_resource path="res://CombatSystem/UserInterface/UIActionMenu/UIActionMenu.gd" type="Script" id=1]
[ext_resource path="res://CombatSystem/UserInterface/UIActionMenu/UIActionList.tscn" type="PackedScene" id=3]

[node name="UIActionMenu" type="Control"]
margin_left = 968.0
margin_top = 624.0
margin_right = 1311.0
margin_bottom = 942.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIActionsList" parent="." instance=ExtResource( 3 )]
[connection signal="action_selected" from="UIActionsList" to="." method="_on_UIActionsList_action_selected"]
